# pndpowerd

./: .gitignore  Setup.hs  pndpowerd.cabal  pndpowerd.service
src/: Config.hs  Main.hs  Pandora.hs
