-- Copyright 2016 Benjamin Barenblat
--
-- Licensed under the Apache License, Version 2.0 (the “License”); you may not
-- use this file except in compliance with the License.  You may obtain a copy
-- of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an “AS IS” BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
-- License for the specific language governing permissions and limitations under
-- the License.

cabal-version:       >=1.10
name:                pndpowerd
version:             0.1.0
synopsis:            power manager for the OpenPandora
description:
  pndpowerd provides a basic battery controller for the OpenPandora.  It
  replaces pndevmapperd, which provides battery control functionality under
  Ångström.  Currently, only the A/C charger is supported; charging from USB is
  uncontrolled and unsafe.
copyright:           © 2016 Benjamin Barenblat
license:             GPL-3
license-file:        COPYING
author:              Benjamin Barenblat
maintainer:          benjamin@barenblat.name
category:            System
build-type:          Simple
tested-with:         GHC ==7.6.3
                   , GHC ==7.10.3
extra-source-files:  pndpowerd.service

flag release
  description:         Build in release mode
  default:             False

executable pndpowerd
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- Do not warn with -fwarn-auto-orphans; it causes spurious warnings with at
  -- least one included package.
  ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-uni-patterns
                       -fwarn-monomorphism-restriction
                       -Werror
                       -rtsopts=none
                       -optl-Wl,-z,relro -optl-Wl,-z,now
  if impl(ghc >= 7.10.1)
    ghc-options:         -fno-warn-unused-imports
  if flag(release)
    ghc-options:         -O2
                         -fno-ignore-asserts
                         -fllvm
                         -optl-Wl,-s
  main-is:             Main.hs
  other-modules:       Config
                     , Pandora
  build-depends:       base >=4.6 && <4.9
                     , bifunctors >=0.1 && <5.4
                     , ConfigFile >=1.1.2 && <1.2
                     , filepath >=1.0 && <1.5
                     , MissingH >=1.1.1.0 && <1.5
